--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ pydantic = {extras = ["email"], version = "^2.10.6"}
 pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 argon2-cffi = "^23.1.0"
 cryptography = "^44.0.1"
+python-multipart = "^0.0.20"
+aiofiles = "^24.1.0"
 
 
 [build-system]
