--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,5 @@
-FROM imbios/bun-node:18-slim AS deps
+FROM imbios/bun-node:18-slim
 ARG DEBIAN_FRONTEND=noninteractive
-
 
 RUN apt-get -y update && \
     apt-get install -yq openssl git ca-certificates tzdata && \
@@ -12,18 +11,14 @@ COPY package.json bun.lock ./
 RUN bun install --frozen-lockfile
 
 
-FROM deps AS builder
 WORKDIR /app
 COPY . .
 
 RUN bun run build
 
 
-FROM node:18-slim AS runner
 WORKDIR /app
-
-COPY --from=builder  /app/.next/standalone ./
 
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["bun", "start"]
