--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
   backend:
     image: hojiakbar2806/rent_cars_backend
     container_name: backend
-    command: /bin/sh -c "uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    command: /bin/sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
       - .env  
     expose:
@@ -17,10 +17,20 @@ services:
   frontend:
     image: hojiakbar2806/rent_cars_frontend
     container_name: frontend
+    expose:
+      - "3000"
+    networks:
+      - app-network
+
+  database:
+    image: postgres:latest
+    container_name: database
     env_file:
       - .env
     expose:
-      - "3000"
+      - "5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
     networks:
       - app-network
 
