fix deploy yaml

--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -24,26 +24,29 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
-          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+          push: true
 
       - name: Build and push backend
         uses: docker/build-push-action@v2
         with:
           context: ./backend
           file: ./backend/Dockerfile
-          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          push: true
 
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@master
+      - name: Set up SSH key
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_KEY }}
-          script: |
-            cd ~/rent_cars
-            git pull origin main
-            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-            docker-compose up -d
+          ssh-private-key: ${{ secrets.VPS_KEY }}
+
+      - name: Deploy to AWS
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} << EOF
+          cd ~/rent_cars
+          git pull origin main
+          docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+          docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          docker-compose up -d
