added deploy script

--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Push to Docker Hub and Deploy
+name: Rent-Cars workflow
 
 on:
   push:
@@ -6,37 +6,41 @@ on:
       - main
 
 jobs:
-  build-push-deploy:
+  build-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push frontend
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-          push: true
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
 
-      - name: Build and push backend
-        uses: docker/build-push-action@v2
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-          push: true
+      # - name: Build and push frontend
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./frontend
+      #     file: ./frontend/Dockerfile
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+      #     cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+      #     push: true
 
+      # - name: Build and push backend
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./backend
+      #     file: ./backend/Dockerfile
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+      #     cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+      #     push: true
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.5.4
         with:
@@ -45,7 +49,4 @@ jobs:
       - name: SSH into Server and Deploy
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-          "cd ~/${{ secrets.WORK_DIR }} && \
-          git fetch origin main && \
-          git reset --hard origin/main && \
-          ./scripts/deploy.sh"
+          'bash ~/scripts/deploy.sh'
