--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -12,32 +12,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # - name: Build and push frontend
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./frontend
-      #     file: ./frontend/Dockerfile
-      #     tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-      #     cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-      #     push: true
+      - name: Build and push frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+          push: true
 
-      # - name: Build and push backend
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./backend
-      #     file: ./backend/Dockerfile
-      #     tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-      #     cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-      #     push: true
+      - name: Build and push backend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          push: true
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -48,4 +48,19 @@ jobs:
 
       - name: SSH into Server and Deploy
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "bash ./scripts/deploy.sh"
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+            cd ~/rent-cars || exit
+
+            echo "📥 Pulling latest changes..."
+            git pull origin main
+
+            echo "🐳 Pulling latest Docker images..."
+            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+
+            echo "🚀 Restarting Docker Compose..."
+            docker-compose down
+            docker-compose up -d
+
+            echo "🎉 Deployment completed successfully!"
+          EOF
