--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 networks:
-  app-network:
+  rent_cars_network:
     driver: bridge
 
 services:
@@ -12,7 +12,8 @@ services:
     expose:
       - "8000"
     networks:
-      - app-network
+      - rent_cars_network
+      - database_network
 
   frontend:
     image: hojiakbar2806/rent_cars_frontend
@@ -20,20 +21,7 @@ services:
     expose:
       - "3000"
     networks:
-      - app-network
-
-  database:
-    image: postgres:latest
-    container_name: database
-    env_file:
-      - .env
-    expose:
-      - "5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
-    networks:
-      - app-network
-
+      - rent_cars_network
 
   nginx:
     image: nginx:latest
@@ -47,7 +35,4 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf  
       - ./nginx/error-pages:/usr/share/nginx/html  
     networks:
-      - app-network
-
-volumes:
-  db_data:
+      - rent_cars_network
