--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - .env  
     expose:
       - "8000"
+    volumes:
+      - ./uploads:/app/uploads
     networks:
       - rent_cars_network
       - database_network
