--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -26,6 +26,7 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
+          platforms: linux/amd64 linux/arm64
           tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
           cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
           push: true
@@ -35,6 +36,7 @@ jobs:
         with:
           context: ./backend
           file: ./backend/Dockerfile
+          platforms: linux/amd64 linux/arm64
           tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
           cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
           push: true
