--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,12 @@ networks:
     external: true
 
 services:
-  backend:
+  rent_car_backend:
     image: hojiakbar2806/rent_cars_backend
     container_name: backend
     command: /bin/sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
-      - .env  
+      - .env
     expose:
       - "8000"
     volumes:
@@ -19,7 +19,7 @@ services:
       - rent_cars_network
       - database_network
 
-  frontend:
+  rent_car_frontend:
     image: hojiakbar2806/rent_cars_frontend
     container_name: frontend
     expose:
@@ -27,16 +27,16 @@ services:
     networks:
       - rent_cars_network
 
-  nginx:
+  rent_car_nginx:
     image: nginx:latest
-    container_name:  nginx
+    container_name: nginx
     depends_on:
-      - frontend
-      - backend
+      - rent_car_frontend
+      - rent_car_backend
     ports:
-      - "85:80" 
+      - "85:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf  
-      - ./nginx/error-pages:/usr/share/nginx/html  
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/error-pages:/usr/share/nginx/html
     networks:
       - rent_cars_network
