--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.487.0",
     "negotiator": "^1.0.0",
     "next": "15.2.1",
     "nextjs-toploader": "^3.7.15",
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
