--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,16 +23,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/rent-cars || exit
-
-            echo "📥 Pulling latest changes..."
             git pull origin main
-
-            echo "🐳 Pulling latest Docker images..."
-            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
-            docker pull ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-
-            echo "🚀 Restarting Docker Compose..."
             docker-compose down
+            docker-compose pull
             docker-compose up -d
-
-            echo "🎉 Deployment completed successfully!"
