--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
     external: true
 
 services:
-  rent_car_backend:
+  backend:
     image: hojiakbar2806/rent_cars_backend
     command: /bin/sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     env_file:
@@ -18,7 +18,7 @@ services:
       - rent_cars_network
       - database_network
 
-  rent_car_frontend:
+  fronten:
     image: hojiakbar2806/rent_cars_frontend
     expose:
       - "3000"
@@ -27,7 +27,7 @@ services:
     networks:
       - rent_cars_network
 
-  rent_car_nginx:
+  nginx:
     image: nginx:latest
     container_name: nginx
     depends_on:
