--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,14 @@ services:
     networks:
       - rent_cars_network
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    expose:
+      - "6379"
+    networks:
+      - rent_cars_network
+
   nginx:
     image: nginx:latest
     container_name: nginx
