--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "negotiator": "^1.0.0",
@@ -41,6 +42,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
