--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -26,7 +26,7 @@ server {
         error_page 500 502 503 504 /500.html;
     }
 
-    location /api {
+    location /backend {
         proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
