--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/rent-cars || exit
-            git pull origin main
             docker-compose down
             docker-compose pull
-            docker-compose up -d
+            docker-compose up -d --build
