--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -25,6 +25,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Build and push backend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
+          push: true
+
       - name: Build and push frontend
         uses: docker/build-push-action@v2
         with:
@@ -33,12 +42,4 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
           cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_frontend:latest
           push: true
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v2
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          tags: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
-          cache-from: ${{ secrets.DOCKER_USERNAME }}/rent_cars_backend:latest
           push: true
