--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,7 @@ upstream frontend {
 server {
     listen 80;
     server_name localhost;
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://frontend;
